# breed-web

./: .Cargo.toml.swp  .env  Cargo.toml  build.rs  package-lock.json
migrations/2019-08-13-202541_base/: .up.sql.swp  down.sql  up.sql
src/: .core.rs.swp  .errors.rs.swp  .handlers.rs.swp  .main.rs.swp  .models.rs.swp  .schema.rs.swp  constants.rs  core.rs  errors.rs  events.rs  handlers.rs  main.rs  model.rs  models.rs  mq_protocol.rs  name.rs  names.rs  response.rs  schema.rs  session.rs  utils.rs
src/proto/: action.proto  event.proto
web/: app.js  index.html
web-svelte/src/: App.svelte  Character.svelte  CharacterCard.svelte  Draggable.svelte  Event.svelte  Front.svelte  Game.svelte  SessionManagePage.svelte  app.js  main.js  stores.js
web/components/: character.svelte
