[package]
name = "breed-web-back"
version = "0.1.0"
authors = ["song"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
lazy_static = "1.3.0"
derive_more = "0.15.0"
futures = "0.1"
argonautica = "0.2.0"
actix = "0.8.3"
actix-web = { version = "1.0.0", features = ["ssl"] }
actix-session = "0.2.0"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
dotenv = "0.14.1"
rand = "0.6.5"
r2d2_beanstalkd = { git = "https://github.com/song9446/r2d2-beanstalkd" }
base64 = "0.11.0"
byteorder = "1.3.1"
