[package]
name = "degeneration-tungstenite-tokio"
version = "0.1.0"
authors = ["Eunchul Song <sech9446@naver.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14.1"
anyhow = "1.0"
env_logger = "0.6"
lazy_static = "1.3.0"

tokio-tungstenite = { git = "https://github.com/sdroege/tokio-tungstenite.git", branch = "stream-proxy-wakers" }
tokio = { version = "0.2.1", features = ["rt-core", "rt-threaded", "rt-util", "time"] }
futures = "0.3"
actix-threadpool = "0.2.0"

chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"

bcrypt = "0.6"
rand = "0.6.5"

prost = "0.5"
prost-derive = "0.5.0"
bytes = "0.4"

slab = "0.4"

[build-dependencies]
prost-build = "0.5"

[dev-dependencies]
tokio-test = "0.2.0"
